# obs_teleport_mobile

./: README.md  build.sh  pubspec.yaml
android/app/: build.gradle
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/camera/: camera_image_converter.dart  video_converter.dart
lib/global/: types.dart
lib/interop/: camera_image_converter.dart
lib/models/: settings_model.dart
lib/obs_teleport/: announce_teleport_peer.dart  packet.dart  pool.dart
lib/screens/: composition_screen.dart  logger_screen.dart  monitor_screen.dart  settings_screen.dart  sources_screen.dart  teleport_interface_screen.dart  terminal.dart
lib/services/: camera_service.dart
lib/ssdp/: ssdp_announcer.dart  ssdp_config.dart  ssdp_discoverer.dart
lib/utils/: logger.dart
lib/widgets/: camera_preview.dart  device_dropdown.dart  peer_info_form.dart  stream_text.dart
modules/media_processors/: .metadata  README.md  ffigen.yaml  pubspec.yaml
modules/media_processors/android/: build.gradle  settings.gradle
modules/media_processors/example/: README.md  pubspec.yaml
modules/media_processors/lib/: media_processors.dart  media_processors_bindings_generated.dart
modules/media_processors/src/: CMakeLists.txt  media_processors.c  subtract.c  subtract.h
modules/native_image_converter/: README.md  ffigen.yaml  pubspec.yaml
modules/native_image_converter/android/: build.gradle  settings.gradle
modules/native_image_converter/src/: CMakeLists.txt  native_image_converter.c  native_image_converter.h
test/: widget_test.dart
test/ssdp_tests/: ssdp_announcer_test.dart
(+17 files in other folders)
